setting up grunt with browserify

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div id="explanation" class="explanation-container">Explanation text goes here</div>
     <input type="text" id="player-input" class="player-input">
   </div>
-  <script type="text/javascript" src="js/adventure.js"></script>
+  <script type="text/javascript" src="compiled/adventure.js"></script>
 </body>
 </html>
