setting up more dom stuff and logging

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <div id="main-container" class="main-container">
-    <div id="explanation" class="explanation-container">Explanation text goes here</div>
+    <div id="description" class="description-container"></div>
+    <div id="explanation" class="explanation-container"></div>
     <input type="text" id="player-input" class="player-input">
   </div>
   <script type="text/javascript" src="compiled/adventure.js"></script>
