trying to be smarter about breaking up files. made the decision that location data (i.e., actual content) needs to be in its own files. Might eventually break things up even more (JSON files for long copy?)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="main-container" class="main-container">
     <div id="description" class="description-container"></div>
+    <hr class="divider" />
     <div id="explanation" class="explanation-container"></div>
     <input type="text" id="player-input" class="player-input">
   </div>
